# apps/api/config/settings/base.py
@@ -34,6 +34,7 @@ INSTALLED_APPS = [
     "apps.events",
     "apps.storefront",
     "apps.cart",
+    "apps.checkout",
 ]
 
 MIDDLEWARE = [
